--- a/about.html
+++ b/about.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The start and history about Rainy Days">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The start and history about Rainy Days" />
+    <link href="css/about.css" rel="stylesheet" />
     <title>Rainy Days | About us</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <section>
-            <img src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg" alt="Name of picture" width="100%" height="500px">
-            <h1>Rainy Days</h1>
-            <h3>Pushing the Comfort Zone</h3>
-        </section>
-        </header>
-        <main>
-            <h1>About us</h1>
-            <p>Rainy days started in a garage in 2010. Since then we have worked our way to becoming the best outdoor jacket company. We have jackets for all year around, and can customize them for your needs. If you want to know more about us, go check us out on instagram and facebook.</p>
-        </main>
-         <footer>
-       <h3>Contact</h3>
-       <section>
-           <p>Adress</p>
-           <p>5055 Bergen, Danmarksvegen 10</p>
-           <a href="Phone">Phone: +47 416 04 683</a>
-           <a href="Mail">Mail: Contact@Rainydays.com</a>
-       </section>
-   </footer>
-</body>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
+    </header>
+      <img
+        src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
+        alt="Name of picture"
+        width="100%"
+        height="500px"
+      />
+    </section>
+    <main>
+      <h1>About us</h1>
+      <p>
+        Rainy days started in a garage in 2010. Since then we have worked our
+        way to becoming the best outdoor jacket company. We have jackets for all
+        year around, and can customize them for your needs. If you want to know
+        more about us, go check us out on instagram and facebook.
+      </p>
+    </main>
+    <footer>
+      <h3>Contact</h3>
+      <section>
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+        <a href="Phone">Phone: +47 416 04 683</a>
+        <a href="Mail">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
 </html>
