--- a/Index.html
+++ b/Index.html
@@ -1,96 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Good quality outdoor jackets from Rainy Days">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Good quality outdoor jackets from Rainy Days"
+    />
+    <link href="css/Home.css" rel="stylesheet" />
     <title>Rainy Days | Home</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" class="list" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" class="logo" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" class="shoppingcart" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
     </header>
     <main>
-        <section>
-            <img src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg" alt="mountain" width="100%" height="500px">
-            <img src="logo/RainyDays_Logo-hvit.svg" width="100%" height="350px">
-            <h1>Rainy Days</h1>
-            <h2>Pushing the Comfort Zone</h2>
-            <a href="Women">Women</a>
-            <a href="Men.html" class="cta-button">Men</a>
-        </section>
-        <section>
-            <h2>New in</h2>
-            <div>
-                <a href="product.html">
-            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" width="300px" height="300px">
-            </a>
+      <section>
+        <img
+          src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
+          class="blurred"
+          alt="mountain"
+          width="100%"
+          height="500px"
+        />
+        <img
+          src="logo/RainyDays_Logo-hvit.svg"
+          class="logo-on-image"
+          alt="rainydayslogo"
+          width="100%"
+          height="350px"
+        />
+        <div class="category-container">
+          <div class="category">
+            <a href="Men.html" class="link">Women</a>
+          </div>
+          <div class="category">
+            <a href="Men.html" class="link">Men</a>
+          </div>
+        </div>
+      </section>
+      <section class="new-in">
+        <h2>New in</h2>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket1.png"
+              alt="Rainy days 365"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
             <h3>Rainy days 365</h3>
             <p>Water ressistant</p>
             <p>Breathable</p>
             <p>1299 Nok</p>
-            <a href="cart.html" class="cta">Add to cart</a>
-            </div>
-            <div>
-                <a href="product.html">
-                <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" width="300px" height="300px">
-                </a>
-                <h3>Rainy days 265</h3>
-                <p>Breathable</p>
-                <p>999 Nok</p>
-                <a href="cart.html" class="cta">Add to cart</a>
-                </div>
-                <div>
-                    <a href="product.html">
-                    <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" width="300px" height="300px">
-                    </a>
-                    <h3>Rainy days 165</h3>
-                    <p>Winter</p>
-                    <p>Breathable</p>
-                    <p>Water ressistant</p>
-                    <p>1999 Nok</p>
-                    <a href="cart.html" class="cta">Add to cart</a>
-                    </div>
-                    <div>
-                        <a href="product.html">
-                        <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" width="300px" height="300px">
-                        </a>
-                        <h3>Rainy days 65</h3>
-                        <p>Water ressistant</p>
-                        <p>1599 Nok</p>
-                        <a href="cart.html" class="cta">Add to cart</a>
-                        </div>
-                     </section>
-                     </main>
-                     <footer>
-                        <h3>Contact</h3>
-                        <section>
-                            <p>Adress</p>
-                            <p>5055 Bergen, Danmarksvegen 10</p>
-                            <a href="Phone">Phone: +47 416 04 683</a>
-                            <a href="Mail">Mail: Contact@Rainydays.com</a>
-                        </section>
-                    </footer>
-                </body>
-                </html>
-   
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket2.png"
+              alt="Rainy days 265"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 265</h3>
+            <p>Breathable</p>
+            <p>999 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket3.png"
+              alt="Rainy days 165"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 165</h3>
+            <p>Winter</p>
+            <p>Breathable</p>
+            <p>Water ressistant</p>
+            <p>1999 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h3>Contact</h3>
+      <section class="adress">
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+      </section>
+      <section class="mail-phone">
+        <a href="Phone" class="link">Phone: +47 416 04 683</a>
+        <a href="Mail" class="link">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
+</html>
