--- a/Men.html
+++ b/Men.html
@@ -1,88 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Good quality outdoor jackets from Rainy Days">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Good quality outdoor jackets for men" />
+    <link href="css/men.css" rel="stylesheet" />
     <title>Rainy Days | Men</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
+    </header>
+    <main>
+      <section class="men">
         <h1>Men</h1>
-        </header>
-        <main>
-            <div>
-                <a href="product.html">
-                <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" width="300px" height="300px">
-                </a>
-                <h3>Rainy days 365</h3>
-                <p>Water ressistant</p>
-                <p>Breathable</p>
-                <p>1299 Nok</p>
-                <a href="cart.html" class="cta">Add to cart</a>
-                </div>
-                <div>
-                    <a href="product.html">
-                    <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" width="300px" height="300px">
-                    </a>
-                    <h3>Rainy days 265</h3>
-                    <p>Breathable</p>
-                    <p>999 Nok</p>
-                    <a href="cart.html" class="cta">Add to cart</a>
-                    </div>
-                    <div>
-                        <a href="product.html">
-                        <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" width="300px" height="300px">
-                        </a>
-                        <h3>Rainy days 165</h3>
-                        <p>Winter</p>
-                        <p>Breathable</p>
-                        <p>Water ressistant</p>
-                        <p>1999 Nok</p>
-                        <a href="cart.html" class="cta">Add to cart</a>
-                        </div>
-                        <div>
-                            <a href="product.html">
-                            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" width="300px" height="300px">
-                            </a>
-                            <h3>Rainy days 65</h3>
-                            <p>Water ressistant</p>
-                            <p>1599 Nok</p>
-                            <a href="cart.html" class="cta">Add to cart</a>
-                            </div>
-                        </main>
-                        <footer>
-                            <h3>Contact</h3>
-                            <section>
-                                <p>Adress</p>
-                                <p>5055 Bergen, Danmarksvegen 10</p>
-                                <a href="Phone">Phone: +47 416 04 683</a>
-                                <a href="Mail">Mail: Contact@Rainydays.com</a>
-                            </section>
-                        </footer>
-                     </body>
-                     </html>
-   
-                    
-   
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket1.png"
+              alt="Rainy days 365"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <h3>Rainy days 365</h3>
+          <p>Water ressistant</p>
+          <p>Breathable</p>
+          <p>1299 Nok</p>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket2.png"
+              alt="Rainy days 265"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <h3>Rainy days 265</h3>
+          <p>Breathable</p>
+          <p>999 Nok</p>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket3.png"
+              alt="Rainy days 165"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <h3>Rainy days 165</h3>
+          <p>Winter</p>
+          <p>Breathable</p>
+          <p>Water ressistant</p>
+          <p>1999 Nok</p>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+        <div>
+          <a>
+            <img
+              src="images/RainyDays_Jacket4.png"
+              alt="Rainy days 65"
+              width="300px"
+              height="300px"
+            />
+          </a>
+          <div class="product-text">
+            <h3>Rainy days 65</h3>
+            <p>Water ressistant</p>
+            <p>1599 Nok</p>
+          </div>
+          <div class="addtocart">
+            <a href="cart.html" class="link">Add to cart</a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h3>Contact</h3>
+      <section>
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+        <a href="Phone">Phone: +47 416 04 683</a>
+        <a href="Mail">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
+</html>
