--- a/check-out.html
+++ b/check-out.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="checkout">
-    <link href="css/styles.css" rel="stylesheet">
-    <title>Rainy Days | Checkout</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <h1>Check out</h1>
-        </header>
-        <main>
-            <section>
-            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" width="300px" height="300px">
-            <h3>Rainy days 365</h3>
-            <p>Water ressistant</p>
-            <p>Breathable</p>
-            </section>
-            <section>
-                <h3>Rainy days 365</h3>
-                <p>1299 Nok</p>
-                <p>Shipping</p>
-                <p>0 Nok</p>
-                <p>Total</p>
-                <p>1299 Nok</p>
-            </section>
-            <section>
-                <a href="resipt.html" class="cta">Purchase</a>
-            </section>
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="check out" />
+    <link href="css/checkout.css" rel="stylesheet" />
+    <title>Rainy Days | Check out</title>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
+    </header>
+    <main>
+      <h1>Check out</h1>
+      <section class="cart">
+        <div class="rainy">
+          <img
+            src="images/RainyDays_Jacket1.png"
+            alt="Rainy days 365"
+            class="image"
+            width="300px"
+            height="300px"
+          />
+        </div>
+      </section>
+      <section>
+        <div class="price">
+          <p>Rainy days 365</p>
+          <p>1299 Nok</p>
+        </div>
+        <div class="shipping">
+          <p>Shipping</p>
+          <p>0 Nok</p>
+        </div>
+        <div class="total">
+          <p>Total</p>
+          <p>1299 Nok</p>
+        </div>
+      </section>
+      <section>
+        <div class="buttons">
+          <a href="resipt.html" class="button">Purchase</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h3>Contact</h3>
+      <section>
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+        <a href="Phone">Phone: +47 416 04 683</a>
+        <a href="Mail">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
 </html>
