--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact us for any questions">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact us for any questions" />
+    <link href="css/contact.css" rel="stylesheet" />
     <title>Rainy Days | Contact</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <h1>Contact</h1>
-        </header>
-        <main>
-            <section>
-            <input type="text" id="Name" name="Name" placeholder="Name"> 
-            <input type="text" id="Phone number" placeholder="Phone number">
-            <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
-
-        </section>
-        <section>
-             <a href="sucsess.html" class="cta">Send message</a>
-        </section>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
+    </header>
+    <main>
+      <h1>Contact</h1>
+      <p>
+        If you have any problems or questions, please contact us and we will
+        answer as soon as possible.
+      </p>
+      <textinput>
+        <input type="text" id="Name" name="Name" placeholder="Name" />
+        <input type="text" id="Phone-number" placeholder="Phone number" />
+        <p>Write your message in the box below</p>
+        <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
+      </textinput>
+      <section>
+        <a href="sucsess.html" class="cta">Send message</a>
+      </section>
     </main>
-        <footer>
-       <h3>Contact</h3>
-       <section>
-           <p>Adress</p>
-           <p>5055 Bergen, Danmarksvegen 10</p>
-           <a href="Phone">Phone: +47 416 04 683</a>
-           <a href="Mail">Mail: Contact@Rainydays.com</a>
-       </section>
-   </footer>
-</body>
+    <footer>
+      <h3>Contact</h3>
+      <section>
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+        <a href="Phone">Phone: +47 416 04 683</a>
+        <a href="Mail">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
 </html>
