--- a/resipt.html
+++ b/resipt.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="checkout">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="resipt" />
+    <link href="css/resipt.css" rel="stylesheet" />
     <title>Rainy Days | Resipt</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="links.html">
-                        <img src="icons/Group 27.svg" width="20px" height="20px">
-                    </a>
-                </li>
-                <li>
-                    <a href="Index.html">
-                        <img src="logo/RainyDays_Logo-svart.svg" width="250px">
-                    </a>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="icons/shopping-cart.svg" width="20px" heigth="20px">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <h1>Resipt</h1>
-        </header>
-        <main>
-            <section>
-                <P>Success!</P>
-                <p>Your order is confirmed!</p>
-                <p>You will recieve an email within 24- hours. If you do not recieve an email, please contact us on</p>
-                <a href="Rainydays@gmail.com.">Rainydays@gmail.com</a>
-            </section>
-            <section>
-                <a href="Index.html" class="cta">Continue shopping</a>
-            </section>
-        </main>
-    </body>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="Men.html">Men</a>
+      <a href="Men.html">Women</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <header class="header">
+      <a href="Index.html" class="bla">
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+      </a>
+      <a href="cart.html" class="bla">
+        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+      </a>
+    </header>
+    <main>
+      <h1>Resipt</h1>
+      <section>
+        <p>Success!</p>
+        <p>Your order is confirmed!</p>
+        <p>
+          You will recieve an email within 24- hours. If you do not recieve an
+          email, please contact us on
+        </p>
+        <p>Rainydays@gmail.com</p>
+      </section>
+      <section>
+        <a href="Index.html" class="cta">Continue shopping</a>
+      </section>
+    </main>
+    <footer>
+      <h3>Contact</h3>
+      <section>
+        <p>Adress</p>
+        <p>5055 Bergen, Danmarksvegen 10</p>
+        <a href="Phone">Phone: +47 416 04 683</a>
+        <a href="Mail">Mail: Contact@Rainydays.com</a>
+      </section>
+    </footer>
+  </body>
 </html>
